fixed the layout bugs

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -55,6 +55,8 @@ body {
 .login-prompt {
   margin-top : 10px;
   margin-bottom : 2px;
+  margin-left: 10px;
+  margin-right: 10px;
   font-size : 20px;
   color : #ffffff;
 }
